# Centroid

./: .gitignore  CMakeLists.txt
include/: CompositeArea.h  Ellipse.h  Figure.h  Polygon.h  Position.h
src/: CompositeArea.cpp  Ellipse.cpp  Figure.cpp  Polygon.cpp  Position.cpp  main.cpp
